--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.523.0",
-    "nodemailer": "^7.0.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.3",
     "react-pageflip": "^2.0.3",
     "react-parallax-tilt": "^1.7.299",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "resend": "^6.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
